[package]
name = "the_uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
lazy_static = "1.4.0"
regex = "1.7.1"
reqwest = "0.11.14"
tdlib = { version = "0.4", default-features = false }
tokio = { version = "1.25.0", features = ["full"] }
